# data-science-utils-python

./: .gitignore  README.md  build_language_container.sh  error_code_config.yml  pyproject.toml  setup.py
.github/workflows/: check_setup_py.yaml  language_container.yaml  pytest.yaml
doc/changes/: changes_0.1.0.md
exasol_data_science_utils_python/model_utils/: iteratorconfig.py  model_aggregator.py  partial_fit_iterator.py  persistence.py  prediction_iterator.py  random_forest_iterator.py  random_forrest_iterator.py  reservoir_shuffle.py  score_iterator.py  sgdclassifier_utils.py  sklearn_contrast_matrix_transformer.py  sklearn_min_max_scalar.py
exasol_data_science_utils_python/model_utils/udfs/: abstract_column_preprocessor_creator.py  column_preprocessor_creator.py  combine_to_voting_regressor_udf.py  connection_object.py  partial_fit_regression_train_udf.py  partial_fit_regression_training_runner.py  partial_fit_regressor_udf.py  predict_regressor_udf.py  preprocessor_udf.py  score_regressor_udf.py  sql_udf_stub_creator.py  train_udf.py  training_parameter.py  training_runner.py
exasol_data_science_utils_python/preprocessing/: column_preprocessor.py  column_preprocessor_definition.py  parameter_table.py  pyexasol_sql_executor.py  table_preprocessor.py  tranformation_table.py  transform_select_clause_part.py  transformation_column.py
exasol_data_science_utils_python/preprocessing/encoding/: ordinal_encoder.py
exasol_data_science_utils_python/preprocessing/normalization/: min_max_scaler.py
exasol_data_science_utils_python/preprocessing/schema/: column.py  column_builder.py  column_name.py  column_name_builder.py  column_type.py  identifier.py  schema.py  (+6 more)
exasol_data_science_utils_python/schema/: column.py  column_name.py  column_name_builder.py  column_type.py  connection_object_name.py  connection_object_name_builder.py  connection_object_name_impl.py  dbobject.py  dbobject_name.py  dbobject_name_impl.py  dbobject_name_with_schema.py  dbobject_name_with_schema_impl.py  exasol_identifier.py  exasol_identifier_impl.py  experiment_name.py  identifier.py  schema_name.py  table.py  table_builder.py  table_like.py  table_like_name.py  table_like_name_impl.py  table_name.py  table_name_builder.py  table_name_impl.py  udf_name.py  udf_name_builder.py  udf_name_impl.py  view.py  view_name.py  view_name_builder.py  view_name_impl.py
exasol_data_science_utils_python/udf_utils/: abstract_bucketfs_location.py  bucketfs_factory.py  bucketfs_location.py  iterator_utils.py  localfs_mock_bucketfs_location.py  pyexasol_sql_executor.py  sql_executor.py
exasol_data_science_utils_python/utils/: data_classes_runtime_type_check.py  hash_generation_for_object.py  repr_generation_for_object.py
githooks/: install.sh
scripts/: start_integration_test_environment.sh
tests/integration_tests/: test_bucketfs_location.py  test_pyexasol_sql_executor.py  test_table_preprocessor.py  test_train_udf.py
tests/unit_tests/: mock_sql_executor.py  test_mock_result_set.py  test_mock_sql_executor.py
(+131 files in other folders)
