[tool.poetry]
name = "exasol-data-science-utils-python"
version = "0.1.0"
description = "Exasol specific Data Science utilities for the Python programming language"

license = "MIT"

authors = [
    "Torsten Kilias <torsten.kilias@exasol.com>",
    "Anastasiia Sergienko <anastasiia.sergienko@exasol.com>"
]

readme = 'README.md'

repository = "https://github.com/exasol/data-science-utils-python"
homepage = "https://github.com/exasol/data-science-utils-python"

keywords = ['exasol', 'data-science']

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
pyexasol = "^0.17.0"
pandas = "^1.1.0"
joblib = "^1.0.1"
exasol-bucketfs-utils-python  = { git = "https://github.com/exasol/bucketfs-utils-python.git", branch = "main" }
scikit-learn = "^0.24.1"
mlxtend = "^0.18.0"
jsonpickle = "^2.0.0"
simplejson = "^3.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "master" }