[tool.poetry]
name = "exasol-data-science-utils-python"
version = "0.1.0"
description = "Exasol specific Data Science utilities for the Python programming language"

license = "MIT"

authors = [
    "Torsten Kilias <torsten.kilias@exasol.com>",
    "Anastasiia Sergienko <anastasiia.sergienko@exasol.com>"
]

readme = 'README.md'

repository = "https://github.com/exasol/data-science-utils-python"
homepage = "https://github.com/exasol/data-science-utils-python"

keywords = ['exasol', 'data-science']

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pyexasol = "^0.25.0"
pandas = "^1.1.0"
joblib = "^1.0.1"

exasol-bucketfs = "^0.6.0"
scikit-learn = "^1.1.2"
mlxtend = "^0.20.0"
jsonpickle = "^2.0.0"
simplejson = "^3.17.2"
typeguard = "^2.11.1"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "main" }
